cards are aligned correctly. working on importing and styling fonts correctly

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
-    font-family:'Times New Roman', Times, serif;
+    font-family: roboto, serif;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0;
+    justify-content: center;
 }
 
 .header {
@@ -11,16 +11,15 @@ body {
     font-size: 18px;
     background-color: #1F2937;
     color: #F9FAF8;
-    font-weight: 600;
     justify-content: space-between;
     align-items: center;
-    flex: 1;
+    width: 100%;
+    padding: 10px;
 }
 
 ul {
     display: flex;
     list-style: none;
-    text-align: left;
     font-size: 12px;
     font-weight:100;
     gap: 10px;
@@ -72,13 +71,6 @@ img {
     border-radius: 12px;
 }
 
-.body {
-    display: flex;
-    justify-content: center;
-    margin: 10px;
-    gap: 10px; 
-}
-
 .infoheader {
     font-size: 36px;
     font-weight: 300;
@@ -86,15 +78,18 @@ img {
     text-align: center;
 }
 
-.card {
-    justify-content: center;
-    margin-bottom: 26px;
-    max-width: 200px;
+.container {
+    display: flex;
 }
 
-footer {
-    justify-content: center;
-    font-size: 15px;
+.card {
+  max-width: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  padding: 10px;
 }
 
 .fishes {
@@ -108,4 +103,9 @@ footer {
     background-color: #E5E7EB;
     padding: 16px;
     text-align: center;
+}
+
+footer {
+    justify-content: center;
+    font-size: 15px;
 }
